--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.0.0
+absl-py==2.0.0
 altair==5.2.0
 anyio==4.0.0
 appdirs==1.4.4
@@ -142,6 +142,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pyttsx3==2.90
 pytz==2023.3.post1
+pywin32==306
 pywinpty==2.0.11
 PyYAML==6.0.1
 pyzmq==25.1.1
