--- a/requirements.txt
+++ b/requirements.txt
@@ -1,211 +1,6 @@
-absl-py==2.0.0
-altair==5.2.0
-anyio==4.0.0
-appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.4.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-blinker==1.7.0
-cachetools==5.3.2
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-cmake==3.28.1
-colorama==0.4.6
-comm==0.1.4
-comtypes==1.2.0
-contourpy==1.2.0
-customtkinter==5.2.2
-cycler==0.12.1
-darkdetect==0.8.0
-debugpy==1.7.0
-decorator==5.1.1
-defusedxml==0.7.1
-diffusers==0.26.3
-dlib==19.24.2
-dm-tree==0.1.8
-executing==1.2.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-fastjsonschema==2.18.0
-filelock==3.13.1
-Flask==3.0.0
-Flask-Cors==4.0.0
-flatbuffers==23.5.26
-fonttools==4.46.0
-fqdn==1.5.1
-frozendict==2.4.0
-fsspec==2024.2.0
-gast==0.5.4
-gdown==5.2.0
-gitdb==4.0.11
-GitPython==3.1.40
-google-auth==2.25.2
-google-auth-oauthlib==1.2.0
-google-pasta==0.2.0
-grpcio==1.60.0
-gunicorn==21.2.0
-h5py==3.10.0
-html5lib==1.1
-huggingface-hub==0.21.4
-idna==3.4
-importlib-metadata==6.11.0
-ipykernel==6.25.2
-ipython==8.15.0
-ipython-genutils==0.2.0
-ipywidgets==8.1.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.19.0
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.14
-jsonify==0.5
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.7.0
-jupyter-lsp==2.2.0
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-jupyter_server==2.7.3
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.5
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.8
-jupyterlab_server==2.25.0
-keras==2.15.0
-kiwisolver==1.4.5
-libclang==16.0.6
-lxml==5.1.0
-Markdown==3.5.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.1
-ml-dtypes==0.2.0
-mpmath==1.3.0
-multitasking==0.0.11
-namex==0.0.7
-nbclient==0.8.0
-nbconvert==7.8.0
-nbformat==5.9.2
-nest-asyncio==1.5.7
-networkx==3.2.1
-nltk==3.8.1
-notebook==7.0.3
-notebook_shim==0.2.3
-numpy==1.26.2
-oauthlib==3.2.2
-opencv-python==4.8.1.78
-opt-einsum==3.3.0
-overrides==7.4.0
-packaging==23.1
-pandas==2.1.4
-pandocfilters==1.5.0
-parso==0.8.3
-peewee==3.17.1
-pickleshare==0.7.5
-Pillow==10.1.0
-platformdirs==3.10.0
-pocketsphinx==5.0.2
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-protobuf==4.23.4
-psutil==5.9.5
-pure-eval==0.2.2
-pyarrow==14.0.1
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-PyAudio==0.2.14
-pycparser==2.21
-pydeck==0.8.1b0
-pygame==2.5.2
-Pygments==2.16.1
-pyparsing==3.1.1
-pypiwin32==223
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pyttsx3==2.90
-pytz==2023.3.post1
-pywin32==306
-pywinpty==2.0.11
-PyYAML==6.0.1
-pyzmq==25.1.1
-qtconsole==5.4.4
-QtPy==2.4.0
-rarfile==4.2
-referencing==0.30.2
-regex==2023.10.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.0
-rpds-py==0.10.2
-rsa==4.9
-safetensors==0.4.2
-scikit-learn==1.2.2
-scipy==1.12.0
-screeninfo==0.8.1
-Send2Trash==1.8.2
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-sounddevice==0.4.6
-soupsieve==2.5
-SpeechRecognition==3.10.1
-stack-data==0.6.2
-streamlit==1.29.0
-sympy==1.12
-tenacity==8.2.3
-tensorboard==2.15.1
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-terminado==0.17.1
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-tokenizers==0.15.2
-toml==0.10.2
-toolz==0.12.0
-torch==2.2.1
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.9.0
-transformers==4.38.2
-typing_extensions==4.9.0
-tzdata==2023.3
-tzlocal==5.2
-unrar==0.4
-uri-template==1.3.0
-urllib3==2.0.4
-validators==0.22.0
-watchdog==3.0.0
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.3
-Werkzeug==3.0.1
-widgetsnbextension==4.0.8
-wikipedia==1.4.0
-wrapt==1.14.1
-yfinance==0.2.37
-zipp==3.17.0
+streamlit
+pandas
+numpy
+gunicorn
+requests
+gdown
